samples/_failures_safe/1761795395_06bd9f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_64315d2d.c: In function ‘main’:
./samples/SAFE/__tmp_64315d2d.c:142:5: error: expected expression at end of input
  142 |     if (len >
      |     ^~
./samples/SAFE/__tmp_64315d2d.c:142:5: error: expected declaration or statement at end of input
